--- a/src/app/signup-partners/signup-partners.component.html
+++ b/src/app/signup-partners/signup-partners.component.html
@@ -7,6 +7,8 @@
     <div class="thf-row">
       <thf-input
         class="thf-md-6"
+        name="name"
+        [(ngModel)]="partnerPersonalData.name"
         t-clean
         t-icon="thf-icon-user"
         t-label="Nome"
@@ -15,6 +17,8 @@
 
       <thf-input
         class="thf-md-6"
+        name="lastname"
+        [(ngModel)]="partnerPersonalData.lastname"
         t-clean
         t-icon="thf-icon-user"
         t-label="Sobrenome"
@@ -25,6 +29,8 @@
     <div class="thf-row">
       <thf-email
         class="thf-md-6"
+        name="email"
+        [(ngModel)]="partnerPersonalData.email"
         t-clean
         t-label="Email"
         t-required>
@@ -32,6 +38,8 @@
   
       <thf-password
         class="thf-lg-6"
+        name="password"
+        [(ngModel)]="partnerPersonalData.password"
         t-clean
         t-label="Senha"
         t-required>
@@ -41,6 +49,8 @@
     <div class="thf-row">
       <thf-input
         class="thf-md-6"
+        name="telefone"
+        [(ngModel)]="partnerPersonalData.telefone"
         t-clean
         t-icon="thf-icon-telephone"
         t-label="Telefone"
@@ -50,6 +60,8 @@
 
       <thf-input
         class="thf-md-6"
+        name="city"
+        [(ngModel)]="partnerPersonalData.city"
         t-clean
         t-icon="thf-icon-world"
         t-label="Cidade"
@@ -60,6 +72,8 @@
     <div class="thf-row">
       <thf-input
         class="thf-md-6"
+        name="linkyoutube"
+        [(ngModel)]="partnerPersonalData.linkyoutube"
         t-clean
         t-icon="thf-icon-last-page"
         t-label="Link youtube"
@@ -68,6 +82,8 @@
 
       <thf-input
         class="thf-md-6"
+        name="linkspotify"
+        [(ngModel)]="partnerPersonalData.linkspotify"
         t-clean
         t-icon="thf-icon-last-page"
         t-label="Link spotify"
@@ -78,7 +94,8 @@
 
     <div class="thf-row">
       <thf-select
-        name="change"
+        name="travel"
+        [(ngModel)]="partnerPersonalData.travel"
         class="thf-md-6"
         t-icon="thf-icon-change"
         t-label="Disponibilidade de viagem"
@@ -86,8 +103,9 @@
       </thf-select>
 
       <thf-select
-        name="type"
         class="thf-md-6"
+        name="type"
+        [(ngModel)]="partnerPersonalData.type"
         t-label="Tipo de apresentação"
         t-required
         [t-options]="[{label: 'Carreira solo', value: '1'}, {label: 'Dupla', value: '2'}, {label: 'Banda', value: '3'}]">
@@ -97,6 +115,8 @@
     <div class="thf-row">
       <thf-input
         class="thf-md-6"
+        name="musicalstyle"
+        [(ngModel)]="partnerPersonalData.musicalstyle"
         t-clean
         t-label="Estilo musical"
         t-placeholder="Ex: sertanejo"
@@ -110,7 +130,7 @@
         t-label="Confirmar"
         t-type="primary"
         [t-disabled]="signupPartnersForm.invalid"
-        (t-click)="mockCall();">
+        (t-click)="signupPartners();">
       </thf-button>
     </div>
 
