--- a/src/app/musical-list/musical-list.component.html
+++ b/src/app/musical-list/musical-list.component.html
@@ -11,7 +11,7 @@
 
       <div class="thf-row">
         <div class="thf-md-5 thf-lg-4">
-          <thf-avatar t-size="xl" t-src="assets/graphics/"></thf-avatar>
+          <thf-avatar t-size="xl" t-src="./../../assets/notfound.jpg"></thf-avatar>
         </div>
         <div class="thf-md-7 thf-lg-8">
           <div class="thf-mb-2">
