--- a/src/app/initial-page/initial-page.component.html
+++ b/src/app/initial-page/initial-page.component.html
@@ -98,7 +98,7 @@
   t-size="lg"
   t-title="Entre como cliente">
 
-  <div class="thf-row">
+  <!-- <div class="thf-row">
     <thf-button
       class="thf-md-12"
       t-label="ENTRAR COM FACEBOOK"
@@ -123,9 +123,10 @@
       t-type="primary"
       (t-click)="enableLoginDefault();">
     </thf-button>
-  </div>
+  </div> -->
 
-  <form #formCustomers="ngForm" *ngIf="isLoginDefault">
+  <!-- <form #formCustomers="ngForm" *ngIf="isLoginDefault">-->
+  <form #formCustomers="ngForm">
     <div class="thf-row thf-pt-2 thf-pb-1">
       <thf-input
         class="thf-md-12"
